--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+ <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SearchFragment">
+    tools:context=".SearchFragment"
+     android:orientation="horizontal">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
@@ -15,5 +16,13 @@
         android:textColor="@color/tcolor"
         android:textSize="30dp"
         />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+   <EditText
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       />
 
-</FrameLayout>
+</LinearLayout>
+
