--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@ android:background="@drawable/back"
         android:text="Medicine "
         android:gravity="center"
         android:textSize="30dp"
-        android:textColor="@color/purple_700"
+        android:textColor="#0C4885"
         />
     <TextView
         android:layout_width="match_parent"
@@ -36,8 +36,8 @@ android:background="@drawable/back"
         android:layout_height="wrap_content"
         android:id="@+id/edit"
         android:hint="Email Address"
-        android:background="@color/purple_700"
-        android:textColor="@color/white"
+        android:background="#6FB8DF"
+        android:textColor="@color/black"
         android:layout_margin="10dp"
         android:padding="10dp"
         android:drawableLeft="@drawable/ic_email"/>
@@ -47,8 +47,8 @@ android:background="@drawable/back"
         android:layout_height="wrap_content"
         android:id="@+id/password"
         android:hint="Password"
-        android:background="@color/purple_700"
-        android:textColor="@color/white"
+        android:background="#6FB8DF"
+        android:textColor="@color/black"
         android:layout_margin="10dp"
         android:padding="10dp"
         android:drawableLeft="@drawable/ic_lock"/>
@@ -76,7 +76,7 @@ android:background="@drawable/back"
         android:text="OR"
         android:textSize="19dp"
         android:gravity="center"
-        android:textColor="#B3002A"/>
+        android:textColor="#293DBF"/>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
