--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -67,8 +67,9 @@
         android:id="@+id/btn_signup2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
+        android:layout_marginLeft="250dp"
         android:layout_marginRight="50dp"
+
         android:background="@drawable/button"
         android:text="SignUp"
         android:textSize="15dp" />
@@ -78,7 +79,8 @@
         android:layout_height="wrap_content"
         android:text="Already Register?"
         android:textSize="19dp"
-        android:gravity="center"
+        android:gravity="right"
+        android:textStyle="bold"
         android:layout_marginLeft="50dp"
         android:textColor="#B3002A"/>
 
@@ -86,7 +88,7 @@
         android:id="@+id/btnsignin25"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
+        android:layout_marginLeft="250dp"
         android:layout_marginRight="50dp"
         android:background="@drawable/button"
         android:text="Sign In"
